# odBot

./: .env  .env.dist  .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/commands/: command_trait.rs  database_reset.rs  import_babyfoot_quotes.rs  mod.rs  ping.rs  test_db.rs
src/controllers/: babyfoot_last_ten.rs  babyfoot_leaderboards.rs  babyfoot_match.rs  babyfoot_match_1v1.rs  babyfoot_match_1v2.rs  babyfoot_match_2v2.rs  babyfoot_player_stats.rs  mod.rs  ping.rs
src/core/: application.rs  application_context.rs  commands.rs  constants.rs  controllers.rs  launcher.rs  middlewares.rs  mod.rs
src/data/: mod.rs  static_data.rs
src/handlers/: bot.rs
src/libraries/: discord.rs  mod.rs  surrealdb.rs
src/middlewares/: babyfoot_middleware.rs  discord.rs  event_handler.rs  mod.rs  ping_middleware.rs
src/models/: babyfoot_match.rs  babyfoot_match_quote.rs  babyfoot_stat.rs  babyfoot_team.rs  mod.rs  person.rs
src/renderers/: babyfoot_renderer.rs  command_renderer.rs  mod.rs  utils_renderer.rs
src/utils/: environment.rs  logger.rs
