[package]
name = "od_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version= "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
anyhow = "1.0.71"
env_logger = "0.10.0"
clap = { version= "4.2.7", features = ["derive"]}
serenity_ctrlc = "0.3.0"
log = "0.4.17"
async-trait = "0.1.68"