[package]
name = "od_bot"
version = "1.0.0-rc.1"
edition = "2021"
authors = ["Adrien Gras <agr@owlnext.fr>"]
description = "A simple discord bot for my company"
documentation = "https://github.com/AdrienGras/odBot"
readme = "README.md"
repository = "https://github.com/AdrienGras/odBot"
license-file = "LICENSE"
keywords = ["discord"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version= "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
anyhow = "1.0.71"
env_logger = "0.10.0"
clap = { version= "4.2.7", features = ["derive"]}
serenity_ctrlc = "0.3.0"
log = "0.4.17"
async-trait = "0.1.68"
surrealdb = "1.0.0-beta.9"
serde = { version = "1.0.163", features = ["derive"] }
chrono = {version = "0.4.24", features = ["serde"]}
pad = "0.1.6"
serde_json = "1.0.96"
rand = "0.8.5"